--- a/how-to-test-ai/promptfoo-debugger/3_advance/providers/providers_temp_0.7.yaml
+++ b/how-to-test-ai/promptfoo-debugger/3_advance/providers/providers_temp_0.7.yaml
@@ -12,7 +12,7 @@
     max_tokens: 150
 
   # Anthropic Claude
-- id: anthropic:claude-3-5-sonnet-latest
-  config:
-    temperature: 0.7
-    max_tokens: 150
+# - id: anthropic:claude-3-5-sonnet-latest
+#   config:
+#     temperature: 0.7
+#     max_tokens: 150
