--- a/how-to-test-ai/3-promptfoo-advanced/Weights+Tone/promptfooconfig.yaml
+++ b/how-to-test-ai/3-promptfoo-advanced/Weights+Tone/promptfooconfig.yaml
@@ -9,23 +9,31 @@ prompts:
 tests:
   - threshold: 0.8
     assert:
-      - type: contains
+      - type: contains 
         value: "Bonjour"
         weight: 2
         metric: Correctness
-      - type: llm-rubric
+      - type: llm-rubric 
         value: "Tone is friendly and the text is in French."
         weight: 1
         metric: Tone
-      - type: answer-relevance
+      - type: answer-relevance #this assertion type uses LLLM to judge if the answer is on-topic, so the score here can be between 0 and 1! 
         threshold: 0.8
         weight: 1
         metric: Topicality
-      - type: assert-set
+      - type: assert-set # weight is 1 by default if not specified
         threshold: 0.5
         metric: Performance
         assert:
           - type: cost
             threshold: 0.0008
           - type: latency
-            threshold: 150
+            threshold: 500
+
+             # here is how the final score is calculated: 
+        # Metric     | Score | Weight | Weighted Score
+        # factuality | 1     | 3      | 3
+        # icontains  | 1     | 1      | 1
+        # conciseness| 0     | 1      | 0
+        # TOTAL      | 2.    | 5      | 4
+        # Final Score = 4 / 5 = 0.8
