--- a/how-to-test-ai/Debugger/1_basic/promptfooconfig.yaml
+++ b/how-to-test-ai/Debugger/1_basic/promptfooconfig.yaml
@@ -1,11 +1,12 @@
 prompts:
   - You are a customer support assistant. Respond to the user {{message}}
 
-providers: - id: openai:gpt-4
+providers: 
+- id: openai:gpt-4
 
 tests:
   - vars: 
       message: "I got scammed."
-      assert:
+    assert:
         - type: contains
           value: ["sorry", "understand", "help"]
