--- a/2-promptfoo-basics/Assertions_and_Metrics/Model-graded/factuality/promptfooconfig.yaml
+++ b/2-promptfoo-basics/Assertions_and_Metrics/Model-graded/factuality/promptfooconfig.yaml
@@ -8,4 +8,4 @@ prompts:
 tests:
   - assert:
       - type: factuality
-        value: "Sacramento is the capital of California."
+        value: "Sacramento is the capital of California." #depending on the task you may not always want to provide the value. 
