--- a/3-promptfoo-advanced/Weights+Tone/promptfooconfig.yaml
+++ b/3-promptfoo-advanced/Weights+Tone/promptfooconfig.yaml
@@ -13,15 +13,18 @@ tests:
         value: "Bonjour"
         weight: 2
         metric: Correctness
+
       - type: llm-rubric 
         value: "Tone is friendly and the text is in French."
         weight: 1
         metric: Tone
+
       - type: answer-relevance #this assertion type uses LLLM to judge if the answer is on-topic, so the score here can be between 0 and 1! 
         threshold: 0.8
         weight: 1
         metric: Topicality
-      - type: assert-set # weight is 1 by default if not specified
+
+      - type: assert-set # group related assertions under a single metric.
         threshold: 0.5
         metric: Performance
         assert:
@@ -30,10 +33,24 @@ tests:
           - type: latency
             threshold: 500
 
-             # here is how the final score is calculated: 
-        # Metric     | Score | Weight | Weighted Score
+#.       ASSIGNED SCORE IS ALWAYS IN COMBO WITH PROMPTFOO GRADED SCORE
+
+        # here is how the final score is calculated: “This is a simplified illustration. In reality, LLM-graded assertions return fractional scores between 0 and 1.”
+
+        # Metric     | Score | Weight | Weighted Score ( = Weight x Score)
         # factuality | 1     | 3      | 3
         # icontains  | 1     | 1      | 1
         # conciseness| 0     | 1      | 0
+
         # TOTAL      | 2.    | 5      | 4
         # Final Score = 4 / 5 = 0.8
+
+
+#        # scores can be gradual depending on the metric: 
+        # Examples:
+        # - llm-rubric              # 0.0 to 1.0 (e.g., 0.85)
+        # - similarity              # 0.0 to 1.0 (cosine similarity)
+        # - factuality              # 0.0 to 1.0 (LLM-judged)
+        # - answer-relevance        # 0.0 to 1.0
+        # - context-relevance       # 0.0 to 1.0
+        # - perplexity              # Normalized to 0.0 to 1.0. 
